export interface Song {
    name: string;
    artist: string;
    offset: number;
    resolution: number;
    musicStream: string;
}
